force-app/main/default/objects/Partner_Announcement__c/Partner_Announcement__c.object-meta.xml
<CustomObject>
    <label>Partner Announcement</label>
    <nameField>
        <label>Partner Announcement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Announcements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>