force-app/main/default/objects/Partner_Announcement__c/fields/Announcement_Date__c.field-meta.xml
<CustomField>
    <fullName>Announcement_Date__c</fullName>
    <label>Announcement Date</label>
    <type>Date</type>
</CustomField>