force-app/main/default/objects/Partner_Announcement__c/fields/Announcement_Status__c.field-meta.xml
<CustomField>
    <fullName>Announcement_Status__c</fullName>
    <label>Announcement Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Review</fullName>
            </value>
            <value>
                <fullName>Published</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>