force-app/main/default/objects/Partner_Announcement__c/fields/Office_Location__c.field-meta.xml
<CustomField>
    <fullName>Office_Location__c</fullName>
    <label>Office Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GA</fullName>
            </value>
            <value>
                <fullName>TN</fullName>
            </value>
            <value>
                <fullName>IN</fullName>
            </value>
            <value>
                <fullName>TX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>